 ! (Experience) The XP values of fish are now based on their rarity and have been drastically changed
 ! (Experience) Skills now start at level 1 (configurable in advanced.yml)
 ! (Item) Improved some of the messages sent to the player regarding the Chimaera Wing
 ! (Party) Party member list will only include members of the party that you can see (aren't vanished)
 ! (Skills) Swords no longer require blocking with a shield to trigger counter attacks
 ! (Skills) Stripping wood and right clicking on stripped wood will no longer ready your Axe
 ! (Skills) Some skill level rank requirements have changed
 ! (Skills) Green Thumb now uses a rank system
 ! (Skills) Farmer's Diet & Fisherman's Diet now use a rank system
 ! (Skills) Fixed an edge case bug where Blast Mining wouldn't inform the player that it was on cooldown
 ! (Skills) mcMMO skills will now be on a scale from 1-100 instead of 0-1000 (for existing mcMMO installs this is opt-in and off by default)
 ! (Skills) Skill Super Powers now use a rank system, almost all of them unlocking first at level 10
 ! (Skills) Acrobatics' Roll exploit detection was tweaked to still allow for Roll to trigger even if it rewards no XP
 ! (Skills) Acrobatics' Roll & Gracefull Roll are now considered the same skill (both mechanics are still there)
 ! (Skills) Woodcutting's Double Drop subskill is now named Harvest Lumber
 ! (Skills) Archery's Skill Shot now uses a rank system
 ! (Skills) Axe's Axe Mastery now uses a rank system
 ! (Skills) Axe's Impact now uses a rank system
 ! (Skills) Herbalism's Farmer's Diet now uses a rank system
 ! (Skills) Herbalism's Green Thumb now uses a rank system
 ! (Skills) Shake now uses a rank system
 ! (Skills) Flux Mining now uses a rank system
 = (Skills) Shake now sends custom damage types for better nocheat compat
 ! (Config) Unarmed.IronArm in advanced.yml is now Unarmed.IronArmStyle
 ! (Config) Unarmed.Deflect in advanced.yml is now Unarmed.ArrowDeflect