@@ -398,9 +398,9 @@ Excavation:
             Rank_1: 5
         RetroMode:
             Rank_1: 50
-    TreasureHunter:
+    Archaeology:
         Standard:
-            Rank_1: 10
+            Rank_1: 5
             Rank_2: 25
             Rank_3: 35
             Rank_4: 50
@@ -409,7 +409,7 @@ Excavation:
             Rank_7: 85
             Rank_8: 100
         RetroMode:
-            Rank_1: 100
+            Rank_1: 50
             Rank_2: 250
             Rank_3: 350
             Rank_4: 500
